--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('includes/headData') %>  <%# For including the common font,styles and Js %>
+    <%- include('includes/headData') %> <%# For including the common font,styles
+    and Js %>
   </head>
   <body>
-    <%- include('includes/header') %>  <%# for including the header %>
-    <%- include('includes/mobile-drawer') %> <%# For including the side drawer %>
+    <%- include('includes/header') %> <%# for including the header %> <%-
+    include('includes/mobile-drawer') %> <%# For including the side drawer %>
     <main>
       <h1>Make the world a tastier place!</h1>
       <p>
