--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('includes/headData') %>  <%# For including the common font,styles and Js %>
+    <%- include('includes/headData') %> <%# For including the common font,styles
+    and Js %>
     <link rel="stylesheet" href="styles/recommend.css" />
   </head>
   <body>
-    <%- include('includes/header') %>  <%# for including the header %>
-    <%- include('includes/mobile-drawer') %> <%# For including the side drawer %>
+    <%- include('includes/header') %> <%# for including the header %> <%-
+    include('includes/mobile-drawer') %> <%# For including the side drawer %>
     <main>
       <h1>Share your favorite restaurant!</h1>
       <form action="/recommend" method="POST">
